RESOLVED FIXED177266
FloatingObject should not hold a raw pointer to RootInlineBox.
https://bugs.webkit.org/show_bug.cgi?id=177266
Summary FloatingObject should not hold a raw pointer to RootInlineBox.
alan
Reported 2017-09-20 13:52:14 PDT
RootInlineBoxes can come and go.
Attachments
Patch (7.98 KB, patch)
2017-09-20 14:02 PDT, alan
no flags
alan
Comment 1 2017-09-20 14:02:17 PDT
WebKit Commit Bot
Comment 2 2017-09-20 15:03:09 PDT
Comment on attachment 321364 [details] Patch Clearing flags on attachment: 321364 Committed r222292: <http://trac.webkit.org/changeset/222292>
WebKit Commit Bot
Comment 3 2017-09-20 15:03:11 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-09-27 12:34:20 PDT
Note You need to log in before you can comment on or make changes to this bug.